ZumCoin project specific changes

--- a/services/main/templates/header.html
+++ b/services/main/templates/header.html
@@ -10,15 +10,15 @@
         <link rel="stylesheet" href="https://unpkg.com/unnamed" crossorigin="anonymous"/>
         <link rel="stylesheet" href="/assets/css/account.css"/>
         <link rel="stylesheet" href="/assets/css/widgets.css"/>
-        <link rel="stylesheet" href="/assets/css/shellnet.common.css"/>
-        <title>Shellnet</title>
+        <link rel="stylesheet" href="/assets/css/netwallet.common.css"/>
+        <title>ZUM NetWallet</title>
     </head>
     <body>
 {{ end }}
 
 {{ define "footer" }}
         <footer class="full-container center-text footer">
-            <span>Shellnet © 2019</span>
+            <span>ZUM NetWallet © 2019</span>
         </footer>
     </body>
 </html>
