--- a/services/main/templates/keys.html
+++ b/services/main/templates/keys.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://unpkg.com/unnamed"/>
         <link rel="stylesheet prefetch" href="/assets/css/account.css"/>
         <link rel="icon" href="assets/images/fav_icon.ico" type="image/x-icon">
-        <title>Shellnet</title>
+        <title>ZUM NetWallet</title>
     </head>
     <body>
         <div class="brand-header">
@@ -68,8 +68,8 @@
                     <br>
                     <li>Once done, press <b>Enter</b>. The wallet will then begin synchronizing with the blockchain. Once synchronization is complete, your balance will be updated.</li>
                 </ol>
-                <h3>Import your wallet in <a href="https://github.com/turtlecoin/turtle-wallet-go">Nest</a></h3>
-                <p> Refer to <a href="https://docs.turtlecoin.lol/guides/wallets/using-nest-wallet/#private-view-and-spend-keys"> THIS GUIDE</a>.</p>
+               <h3>Import your wallet in <a href="https://github.com/zumcoin/zum-wallet-electron">Zum-Electron Wallet</a></h3>
+                <p> Refer to <a href="#"> THIS GUIDE</a>.</p>
             </article>
         </div>
 {{ template "footer" }}
