--- a/services/main/templates/login.html
+++ b/services/main/templates/login.html
@@ -7,9 +7,9 @@
         <link rel="stylesheet" href="https://unpkg.com/unnamed@1.2.6/dist/css/unnamed.min.css" crossorigin="anonymous"/>
         <link rel="stylesheet" href="/assets/css/tabs.css"/>
         <link rel="stylesheet" href="/assets/css/widgets.css"/>
-        <link rel="stylesheet" href="/assets/css/shellnet.common.css"/>
+        <link rel="stylesheet" href="/assets/css/netwallet.common.css"/>
         <link rel="stylesheet" href="/assets/css/main.css"/>
-        <title>Shellnet</title>
+        <title>ZUM NetWallet</title>
     </head>
     <script>
         function setSrcQuery(e, q) {
@@ -121,7 +121,7 @@
                             <input type=hidden name=captchaId value="{{.CaptchaID}}"><br>
                             <input name=captchaSolution>
 
-                                    <p>By using Shellnet, you are agreeing to our <a href="/tos">Terms of Service</a></p>
+                                    <p>By using ZUM NetWallet, you are agreeing to our <a href="/tos">Terms of Service</a></p>
                                     <button class="btn btn-primary button-green">Signup</button>
                                 </form>
                             </div>
@@ -129,7 +129,7 @@
                 </div>
             </div>
             <footer class="footer">
-                <code>Shellnet &copy; 2019</code>
+                <code>ZUM NetWallet &copy; 2019</code>
             </footer>
         </div>
     </body>
