--- a/services/main/templates/terms.html
+++ b/services/main/templates/terms.html
@@ -1,11 +1,11 @@
 Terms of Service
-Shellnet is in alpha testing. By using this service, you acknowledge that you are using a product that is in development. User assumes all risks for use, including risks of loss. By using our service, you signify that you accept these Terms of use and that you agree to be bound by them. If you do not agree with any part of these Terms of use, please refrain from using the service.
+ZUM NetWallet is in alpha testing. By using this service, you acknowledge that you are using a product that is in development. User assumes all risks for use, including risks of loss. By using our service, you signify that you accept these Terms of use and that you agree to be bound by them. If you do not agree with any part of these Terms of use, please refrain from using the service.
 
 Cookies
-By using Shellnet, you consent to the use of cookies. Most of the modern day interactive web sites use cookies to enable us to retrieve user details for each visit.
+By using ZUM NetWallet, you consent to the use of cookies. Most of the modern day interactive web sites use cookies to enable us to retrieve user details for each visit.
 
 Privacy
-Each address on Shellnet shares the same view key. Since it is possible to correlate the transactions in a block to a specific TurtleCoin address, your transactions are not completely private.
+Each address on ZUM NetWallet shares the same view key. Since it is possible to correlate the transactions in a block to a specific ZumCoin address, your transactions are not completely private.
 
 Viruses and other harmful intentions
 You must not misuse our service by knowingly introducing viruses, trojans, worms, logic bombs or other material which is malicious or technologically harmful. You must not attempt to gain unauthorised access to our service, the server on which our service is stored or any server, computer or database connected to our service. You must not attack our service via a denial-of-service attack or a distributed denial-of service attack.
