--- a/services/main/templates/header.html
+++ b/services/main/templates/header.html
@@ -18,7 +18,7 @@
 
 {{ define "footer" }}
         <footer class="full-container center-text footer">
-            <span>ZUM NetWallet © 2019</span>
+            <span>ZumCoin NetWallet © 2019</span>
         </footer>
     </body>
 </html>
