--- a/services/main/templates/index.html
+++ b/services/main/templates/index.html
@@ -16,7 +16,7 @@
                     <!--<span class="title landing-title">SHELLNET</span>-->
                     <!-- Use this for brand logo -->
                     <img src="/assets/images/brand-logo.png" class="landing-logo"></img>
-                    <span class="tagline">A secure, easy-to-use wallet for ZumCoin payments</span>
+                    <span class="tagline">A secure and easy-to-use Internet Wallet for ZumCoin payments</span>
                     {{ if .User }}
                         <span class="hello-user">Hello {{ .User.Username }}</span>
     		            <a href="/account"><button class="btn btn-primary button-green">account</button></a>
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <footer class="footer">
-                <code>ZumCoin NetWallet &copy; (v1.5.1)  2019</code>
+                <code>ZumCoin NetWallet &copy;  2019</code>
             </footer>
         </div>
     </body>
