--- a/services/main/templates/login.html
+++ b/services/main/templates/login.html
@@ -45,7 +45,7 @@
     <body>
         <div class="full-container">
             <div class="header title">
-                <span>SHELLNET</span>
+                <span>ZUM NetWallet</span>
             </div>
             <div class="content">
                 <div class="tab_container container">
